--- a/soc_icon.html
+++ b/soc_icon.html
@@ -20,28 +20,28 @@
         <li>
           <a href="#" class="bloc_link link one">
             <svg class="linc_icon" width="20" height="20">
-              <use href="./styles/soc_link_anima.css#icon-facebook"></use>
+              <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li>
           <a href="#" class="bloc_link link two">
             <svg class="linc_icon" width="20" height="20">
-              <use href="./styles/soc_link_anima.css#"></use>
+              <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li>
           <a href="#" class="bloc_link link three">
             <svg class="linc_icon" width="20" height="20">
-              <use href="./styles/soc_link_anima.css#icon-instagram"></use>
+              <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
         <li>
           <a href="#" class="bloc_link link four">
             <svg class="linc_icon" width="20" height="20">
-              <use href="./styles/soc_link_anima.css#icon-linkedin"></use>
+              <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
             </svg>
           </a>
         </li>
